crates/mineral-tui/src/components/layout/shared/transport/snapshots/transport_alias_suffix_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/shared/transport/paint.rs
description: "播放栏:曲名带别名,后缀暗色 (alias)"
expression: t.backend()
---
"╭ transport ───────────────────────────────fmt — ╮"
"│                迷星叫 (Mayoiuta)               │" Hidden by multi-width symbols: [(18, " "), (20, " "), (22, " ")]
"│               MyGO!!!!! · 迷跡波               │" Hidden by multi-width symbols: [(29, " "), (31, " "), (33, " ")]
"│●───────────────────────────────────────────────│"
"╰ 0:00 ──────────────────────────────────── 3:31 ╯"
