crates/mineral-tui/src/components/layout/shared/transport/snapshots/transport_fmt_bit_hz_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/shared/transport/paint.rs
description: "播放栏:fmt 含位深+采样率(flac 24bit/96kHz)"
expression: t.backend()
---
"╭ transport ────────────────────────↓ flac 24bit/96kHz 999kbps ╮"
"│                             捕风                             │" Hidden by multi-width symbols: [(31, " "), (33, " ")]
"│                               ·                              │"
"│━━━━━━━━━━━━━━━━●─────────────────────────────────────────────│"
"╰ 1:00 ────────────────────────────────────────────────── 3:45 ╯"
