crates/mineral-tui/src/components/layout/shared/transport/snapshots/transport_no_track_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/shared/transport/paint.rs
description: "播放栏:无曲目空态"
expression: t.backend()
---
"╭ transport ───────────────────────────────fmt — ╮"
"│                        —                       │"
"│                        ·                       │"
"│●───────────────────────────────────────────────│"
"╰ 0:00 ──────────────────────────────────── -:-- ╯"
