crates/mineral-tui/src/components/layout/shared/transport/snapshots/transport_origin_cache_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/shared/transport/paint.rs
description: "播放栏:来源徽标 cache(◆ 蓝)"
expression: t.backend()
---
"╭ transport ────────────────────────────────────◆ flac 999kbps ╮"
"│                             捕风                             │" Hidden by multi-width symbols: [(31, " "), (33, " ")]
"│                               ·                              │"
"│━━━━━━━━━━━━━━━━●─────────────────────────────────────────────│"
"╰ 1:00 ────────────────────────────────────────────────── 3:45 ╯"
