crates/mineral-tui/src/components/layout/shared/transport/snapshots/transport_origin_remote_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/shared/transport/paint.rs
description: "播放栏:来源徽标 remote(○ 灰)"
expression: t.backend()
---
"╭ transport ─────────────────────────────────────○ mp3 320kbps ╮"
"│                             捕风                             │" Hidden by multi-width symbols: [(31, " "), (33, " ")]
"│                               ·                              │"
"│━━━━━━━━━━━━━━━━●─────────────────────────────────────────────│"
"╰ 1:00 ────────────────────────────────────────────────── 3:45 ╯"
