crates/mineral-tui/src/components/layout/shared/transport/snapshots/transport_playing_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/shared/transport/paint.rs
description: "播放栏:播放中(LoveLetterTypewriter,进度条)"
expression: t.backend()
---
"╭ transport ───────────────────────────────fmt — ╮"
"│              LoveLetterTypewriter              │"
"│                        ·                       │"
"│━━━━━━━━━━━━●───────────────────────────────────│"
"╰ 1:00 ──────────────────────────────────── 3:45 ╯"
