crates/mineral-tui/src/components/layout/shared/transport/snapshots/transport_waveform_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/shared/transport/paint.rs
description: "播放栏:波形进度条(渐强包络化身块字符)"
expression: t.backend()
---
"╭ transport ─────────────────────────────────────────────fmt — ╮"
"│                        CrescendoTrack                        │"
"│                               ·                              │"
"│▁▁▁▁▁▁▁▁▂▂▂▂▂▂▂▃▃▃▃▃▃▃▃▄▄▄▄▄▄▄▄▅▅▅▅▅▅▅▅▆▆▆▆▆▆▆▇▇▇▇▇▇▇▇████████│"
"╰ 1:00 ────────────────────────────────────────────────── 3:45 ╯"
